[tool.poetry]
name = "programming-assignment"
version = "0.1.0"
description = ""
authors = ["Aman Rojjha <aman.rojjha@research.iiit.ac.in>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
jupyter = "^1.0.0"
cvxpy = "^1.2.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
